--- a/Shop/appsettings.json
+++ b/Shop/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "mysqlConnection": "server=whisperq.ru;userid=shop;pwd=cedVJs7cDvBMny+gCxVtivXG;port=3306;database=shop;sslmode=none;"
   }
 }
