--- a/Shop/Shop.csproj
+++ b/Shop/Shop.csproj
@@ -20,4 +20,7 @@
     <Folder Include="img\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Views\Account\Resume.cshtml" />
+  </ItemGroup>
 </Project>
