Add Item ready partical

--- a/Shop/appsettings.json
+++ b/Shop/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "mysqlConnection": "server=whisperq.ru;userid=shop;pwd=cedVJs7cDvBMny+gCxVtivXG;port=3306;database=shop;sslmode=none;"
+    "mysqlConnection": "server=whisperq.ru;userid=shop;pwd=cedVJs7cDvBMny+gCxVtivXG;port=3306;database=shop_database;sslmode=none;"
   }
 }
